--- a/app/index.html
+++ b/app/index.html
@@ -89,6 +89,12 @@
         <!-- endbower -->
         <!-- endbuild -->
 
+        <script>
+        $('body').on('click', function () {
+            $('.pusher').toggleClass('is-pushed');
+        })
+        </script>
+
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
