--- a/app/index.html
+++ b/app/index.html
@@ -90,7 +90,7 @@
         <!-- endbuild -->
 
         <script>
-        $('body').on('click', function () {
+        $('.filter-panel, .main').on('click', function () {
             $('.pusher').toggleClass('is-pushed');
         })
         </script>
