Adding some responsivness

--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
         <![endif]-->
 
         <div class="container"> <!-- ng-app -->
-            <div class="pusher drop-back is-pushed">
+            <div class="pusher drop-back">
 
                 <div class="filter-panel">
                     <div class="scroller">
