--- a/app/index.html
+++ b/app/index.html
@@ -53,6 +53,7 @@
 
                 <div class="main scroller"> <!-- ng-view -->
                     <div class="scroller-content">
+                        <div class="fixed">Some fixed header nav thing</div>
                         <header>
                             <h1>Dashboard</h1>
                         </header>
