Fixed fixed header on mobile

--- a/app/index.html
+++ b/app/index.html
@@ -52,32 +52,35 @@
                 </div>
 
                 <div class="main scroller"> <!-- ng-view -->
-                    <div class="scroller-content">
-                        <div class="fixed">Some fixed header nav thing</div>
+                    <div class="fixed">Some fixed header nav thing</div>
+                        <div class="scroller">
+                            <div class="scroller-content">
 
-                        <header>
-                            <h1>Dashboard</h1>
-                        </header>
+                                <header>
+                                    <h1>Dashboard</h1>
+                                </header>
 
-                        <div class="content">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                <div class="content">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
