--- a/app/index.html
+++ b/app/index.html
@@ -22,14 +22,15 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <div class="container"> <!-- ng-app -->
+        <div class="canvas"> <!-- ng-app -->
             <div class="pusher drop-back">
-                <div class="main scroller"> <!-- ng-view -->
-                    <div class="fixed">Some fixed header nav thing</div>
-                    <div class="scroller">
-                        <div class="scroller-content">
+                <main class="main" role="main"> <!-- ng-view -->
+                    <div class="inner"> <!-- Need better name for inner -->
+                        <header class="navbar">Page fixed header with logo and main nav</header>
+
+                        <div class="some-other-content-container">
                             <header>
-                                <h1>Dashboard</h1>
+                                <h1>Page Title</h1>
                             </header>
 
                             <div class="content">
@@ -54,33 +55,32 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </main>
 
-                <div class="filter-panel">
-                    <div class="scroller">
-                        <div class="scroller-content">
-                            <h2>Filter Panel</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                        </div>
+                <aside class="aside" role="complementary">
+                    <div class="inner">
+                        <h2>Off-canvas panel/Side bar</h2>
+
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
                     </div>
-                </div>
+                </aside>
             </div>
         </div>
 
