--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
         <title>filter panel</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
+        <meta name="apple-mobile-web-app-capable" content="yes">
 
         <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
 
