Finally some fixes for iOS

--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,9 @@
         <title>filter panel</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
+
         <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
         <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
 
@@ -22,22 +24,51 @@
         <!-- endbuild -->
     </head>
     <body>
-        <!--[if lt IE 10]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
         <div class="canvas"> <!-- ng-app -->
             <div class="pusher drop-back">
                 <main class="main" role="main"> <!-- ng-view -->
-                    <div class="inner"> <!-- Need better name for inner -->
-                        <header class="navbar">Page fixed header with logo and main nav</header>
+                    <header class="navbar">Page fixed header with logo and main nav</header>
 
-                        <div class="some-other-content-container">
-                            <header>
-                                <h1>Page Title</h1>
-                            </header>
+                    <div class="scroller">
+                        <div class="scroller-inner">
+                            <div class="some-other-content-container">
+                                <header>
+                                    <h1>Page Title</h1>
+                                </header>
 
-                            <div class="content">
+                                <div class="content">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </main>
+
+                <aside class="aside" role="complementary">
+                    <div class="some-other-content-container">
+                        <h2>Off-canvas panel/Side bar</h2>
+                    </div>
+
+                    <div class="scroller">
+                        <div class="scroller-inner">
+                            <div class="some-other-content-container">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
@@ -58,31 +89,6 @@
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
                             </div>
                         </div>
-                    </div>
-                </main>
-
-                <aside class="aside" role="complementary">
-                    <div class="inner">
-                        <h2>Off-canvas panel/Side bar</h2>
-
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque soluta rerum consectetur temporibus dolor architecto cum tempore facilis voluptatibus esse. Nobis, fugiat sit cumque impedit maiores quam iusto ab perspiciatis.</p>
                     </div>
                 </aside>
             </div>
