Removing some cruft

--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,8 @@
     <body>
         <div class="canvas"> <!-- ng-app -->
             <!-- TODO: Do I need .pusher? -->
-            <div class="pusher is-pushed drop-back">
+            <!-- drop-back, fold-back, push-over -->
+            <div class="pusher is-pushed push-over">
                 <main class="main" role="main"> <!-- ng-view -->
                     <header class="navbar">Page fixed header with logo and main nav</header>
 
