Fixed aside scrolling on desktop

--- a/app/index.html
+++ b/app/index.html
@@ -65,9 +65,7 @@
                 </main>
 
                 <aside class="aside" role="complementary">
-                    <div class="some-other-content-container">
-                        <h2>Off-canvas panel/Side bar</h2>
-                    </div>
+                    <header class="aside-header">Off-canvas panel/side-bar</header>
 
                     <div class="scroller">
                         <div class="scroller-inner">
